# csc116

./: readme.org
tutorials/01_hello_world/: 01_hello_world.org
tutorials/01_hello_world/files/part1/: CMakeLists.txt
tutorials/01_hello_world/files/part2/: CMakeLists.txt
tutorials/01_hello_world/files/part3/: CMakeLists.txt  tester.cmake
tutorials/01_hello_world/files/part3/tests/: test-01.out  test-02.out  test-04.expected  test-05.expected  test-05.in  test-05.out
tutorials/02_strings_vectors_io/: 02_IO_strings.org
tutorials/02_strings_vectors_io/files/part2/: invert_file.pl
tutorials/02_strings_vectors_io/part1/: CMakeLists.txt  read_file.cpp
tutorials/03_strings_debugging/: 03_strings_debugging.org
tutorials/03_strings_debugging/lab03/part1/: string_case.cpp
tutorials/03_strings_debugging/lab03/part1/tests/unix/: test-01.expected  test-02.expected
tutorials/03_strings_debugging/lab03/part1/tests/windows/: test-01.expected  test-02.expected
tutorials/04_matrices_exceptions/: 04_matrices_exceptions.org
tutorials/04_matrices_exceptions/lab04/part1/: part1.cpp
tutorials/06_more_classes/lab06/part1/: matrix.cpp
tutorials/08_memory/: 08_memory.org
tutorials/08_memory/lab08/part2/: link-list.cpp
tutorials/09_templates/: 09_templates.org
